--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <meta name="description" content="genfly Generated Project" />
-    <meta name="author" content="genfly" />
+    <title>MkSaaS - Make Your AI SaaS Product in a Weekend</title>
+    <meta name="description" content="The complete Next.js boilerplate for building profitable SaaS, packed with AI, auth, payments, i18n, newsletter, dashboard, blog, docs, blocks, themes, SEO and more." />
+    <meta name="author" content="MkSaaS" />
     <meta property="og:image" content="/og-image.png" />
+    <style>
+      body { color-scheme: dark; }
+    </style>
   </head>
 
-  <body>
+  <body class="size-full antialiased">
     <div id="root"></div>
     <!-- CRITICAL: This script MUST be retained for genfly to function properly! Do NOT remove! -->
     <!-- genfly editor dependency: https://www.genfly.dev/editor.js -->
